--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "test": "mocha --timeout 30000"
     },
-    "bin": {
+    "scripts": {
         "aldeploy": "bin/aldeploy.js"
     },
     "repository": {
